syntax = "proto3";

 

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

 

package helloworld;

 

service Greeter {
  rpc CreateMessage (MessageRequest) returns (Message) {}
  rpc GetMessage(GetMessageRequest) returns (Message) {}
  rpc UpdateMessage(Message) returns (Message) {}
}

 

message MessageRequest {
  string content = 1;
  string author = 2;
}

 

message GetMessageRequest {
  string id = 1;
}

 

message Message {
  string id = 1;
  string content = 2;
  string author = 3;
}